[package]
name = "axum_hotwire"
authors = ["Giang Hoang  <gianghoang.dev@gmail.com>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Hotwire extractors, responders, and request guards for Axum, inspired by Rails."
repository = "https://github.com/giangbimin/axum_hotwire"
categories = ["web-programming"]
keywords = ["axum", "hotwire", "turbo"]
readme = "README.md"
edition = "2021"

[features]
default = []
unstable = []
guards = ["tower", "futures-core", "pin-project-lite"]
serde = ["dep:serde", "dep:serde_json"]
auto-vary = ["futures", "tokio", "tower"]

[dependencies]
axum-core = "0.4"
http = { version = "1", default-features = false }
async-trait = "0.1"

# Optional dependencies required for the `guards` feature.
tower = { version = "0.5", default-features = false, optional = true }
futures-core = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# Optional dependencies required for the `serde` feature.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Optional dependencies required for the `auto-vary` feature.
tokio = { version = "1", features = ["sync"], optional = true }
futures = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
axum = { version = "0.7", default-features = false }
axum-test = "16"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true